--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,11 @@
             <artifactId>spring-boot-starter-web</artifactId>
             <version>1.4.0.RELEASE</version>
         </dependency>
+        <dependency>
+		    <groupId>org.hibernate</groupId>
+		    <artifactId>hibernate-entitymanager</artifactId>
+		    <version>5.2.17.Final</version>
+		</dependency>
 	</dependencies>
 
 	<build>
